# simplex-constrained-sparse-bagging

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_report.md  datasets.py
experiments/: baselines.py  run_benchmarks.py
paper/: paper.md
scsb/: __init__.py
scsb/models/: __init__.py  ensemble.py
tests/: test_ensemble.py
